--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@
 
 input {
     width: 200px;
-    border-radius: 5px;
+    border-radius: 10px;
+    padding: 1rem;
 }
-
 
 table {
     table-layout: fixed;
@@ -39,7 +39,7 @@ thead th:nth-child(3) {
 }
 
 thead th:nth-child(4) {
-    width: 15%;
+    width: 10%;
 }
 
 thead th:nth-child(5) {
@@ -60,44 +60,63 @@ td {
     padding: 20px;
 }
 
-/* thead th,
-tfoot th {
-    font-family: 'Rock Salt', cursive;
+/* th {
+    letter-spacing: 2px;
 } */
 
-th {
-    letter-spacing: 2px;
-}
-
-td {
+/* td {
     letter-spacing: 1px;
-}
+} */
 
 tbody td {
     text-align: center;
 }
 
-tfoot th {
-    text-align: right;
-}
 
 tbody tr:nth-child(odd) {
-    background-color: #d7a4ca;
+    background-color: #f5f4f5;
 }
 
 tbody tr:nth-child(even) {
-    background-color: #dcc1dc;
+    background-color: #ede9ed;
 }
-
-
 
 table {
-    background-color: #b9509f;
+    background-color: #f1ecef;
 }
 
-thead th,
-tfoot th,
-tfoot td {
+thead th {
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5));
     border: 3px solid purple;
+}
+
+tbody td {
+    border: 3px solid purple;
+}
+
+
+@media screen and (max-width: 640px) {
+    * {
+        font-size: 8px;
+    }
+
+    th,
+    td {
+        padding: 5px;
+    }
+
+}
+
+@media screen and (min-width: 640px) and (max-width: 1280px) {
+    * {
+        font-size: 14px;
+    }
+
+
+}
+
+@media screen and (min-width: 1280px) {
+    * {
+        font-size: 20px;
+    }
 }
